--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "mongoose": "^6.3.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.0.0",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "nodemon": "^2.0.16"
   }
 }
