--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "webpack": "^4.17.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.7"
   }
 }
