--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "babel-loader": "^8.0.2",
+    "css-loader": "^6.7.1",
     "nodemon": "^2.0.16",
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.3.1",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.7"
+    "webpack-dev-server": "^4.9.1"
   }
 }
