--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js",
-    "start:dev": "nodemon server.js"
+    "start": "nodemon ./server/server.js",
+    "start:dev": "nodemon ./server/server.js"
   },
   "repository": {
     "type": "git",
