--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.2",
     "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.16",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
