--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon ./server/server.js",
+    "start": "node ./server/server.js",
     "start:dev": "nodemon ./server/server.js"
   },
   "repository": {
@@ -33,12 +33,13 @@
     "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.2",
     "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "^4.5.2",
     "nodemon": "^2.0.16",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^5.3.3",
     "webpack-dev-server": "^4.9.1"
   }
 }
