--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node ./server/server.js",
+    "start": "nodemon ./server/server.js",
     "start:dev": "nodemon ./server/server.js"
   },
   "repository": {
@@ -26,20 +26,6 @@
     "mongoose": "^6.3.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.0.0",
-    "@babel/node": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "babel-loader": "^8.0.2",
-    "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^4.5.2",
-    "nodemon": "^2.0.16",
-    "sass-loader": "^13.0.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^4.17.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "^5.3.3",
-    "webpack-dev-server": "^4.9.1"
+    "nodemon": "^2.0.16"
   }
 }
