--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "mongoose": "^6.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "babel-loader": "^8.2.5",
     "nodemon": "^2.0.16"
-  }
+  },
+  "keywords": []
 }
