--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "babel-loader": "^8.2.5",
+    "html-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.16",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2",
