--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon ./server/server.js",
-    "start:dev": "nodemon ./server/server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack serve",
+    "start": "node ./server/server.js",
+    "build": "webpack --mode production"
+
   },
   "repository": {
     "type": "git",
