--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Aman-codde/meme-generator#readme",
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -26,7 +27,7 @@
     "mongoose": "^6.3.3"
   },
   "devDependencies": {
-
+    "babel-cli": "^6.26.0",
     "nodemon": "^2.0.16"
   }
 }
