--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node ./server/server.js",
+    "start": "babel-node ./server/server.js",
     "start:dev": "nodemon ./server/server.js"
   },
   "repository": {
