--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "babel-node ./server/server.js",
-    "start:dev": "nodemon ./server/server.js"
+    "start": "babel-node ./src/index.js",
+    "start:dev": "nodemon ./server/server.js",
+    "clean": "rm -rf build && mkdir build"
   },
   "repository": {
     "type": "git",
