--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "babel-node ./src/index.js",
-    "start:dev": "nodemon ./server/server.js",
-    "clean": "rm -rf build && mkdir build"
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build ./src -s",
+    "start": "npm run build && node ./build/index.js",
+    "start:dev": "nodemon ./src/index.js",
+    "build": "npm run clean && npm run build-babel"
   },
   "repository": {
     "type": "git",
